# PersonAchievementsProject

./: .env.example  .gitignore  README.md  compose.yml
app/: .env.example  Dockerfile  pyproject.toml  pytest.ini  requirements.txt  utils.py
app/alembic/: env.py
app/alembic/versions/: 9232559628c4_create_users_table.py  9d31ee4e294d_create_achievements_table.py  f19d31bcef62_create_users_achievements_table.py
app/app/: main.py
app/app/api/v1/achievements/requests/: create_achievement_request.py
app/app/api/v1/achievements/resources/: achievement_resource.py
app/app/api/v1/achievements/routes/: achievements.py
app/app/api/v1/users/requests/: get_users_filter_enum.py
app/app/api/v1/users/resources/: user_achievement_resource.py  user_resource.py
app/app/api/v1/users/routes/: users.py
app/app/domain/achievements/actions/: create_achievement_action.py  get_achievements_action.py
app/app/domain/achievements/models/: __init__.py  achievement.py
app/app/domain/users/actions/: add_achievement_to_user_action.py  get_user_achievements_action.py  get_user_action.py  get_users_action.py
app/app/domain/users/models/: __init__.py  user.py  user_achievement.py
app/app/models/: achievement.py  user.py  user_achievement.py
app/config/: database.py  log.py
app/tests/: achievements_test.py  conftest.py  get_users_test.py  users_test.py
nginx/: nginx.conf
