[tool.poetry]
name = "person_achievements_service"
version = "0.1.0"
description = ""
authors = ["Sergey Tihomirov <anoldyouth@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.9.2"
fastapi = "^0.115.3"
uvicorn = "^0.32.0"
sqlalchemy = "^2.0.36"
alembic = "^1.13.3"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.10"
pytest = "^8.3.3"
configargparse = "^1.7"

[tool.poetry.group.dev.dependencies]
testcontainers = {extras = ["postgresql"], version = "^4.8.2"}
httpx = "^0.27.2"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-docker = "^3.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
